feat(gateway): Update semi-final gateway

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,5 +74,6 @@
         "bitset": "cpp",
         "regex": "cpp",
         "stack": "cpp"
-    }
+    },
+    "latex-workshop.latex.path": "/usr/bin"
 }
